<resources>
    <!--- annotation for name of tab_view -->
    <string name="tab_home">首页</string>
    <string name="tab_community">社区</string>
    <string name="tab_user">个人中心</string>

    <!--- annotation for name of userInfo -->
    <string name="userInfo_moments">动态</string>
    <string name="userInfo_discuss">文章</string>
    <string name="userInfo_follow">关注</string>
    <string name="userInfo_fans">粉丝</string>

    <!--- annotation for default value -->
    <string name="default_moments">0</string>
    <string name="default_follow">0</string>
    <string name="default_fans">0</string>
    <string name="default_areaTel">+86</string>
    <string name="default_city">北京</string>
    <string name="default_vip">未开通vip服务</string>

    <!--- annotation for text of LoginActivity -->
    <string name="login_welcome">欢迎登录小青龙</string>
    <string name="login_inputTel">请输入手机号</string>
    <string name="login_inputPassword">请输入密码</string>
    <string name="login_not_register">未注册的手机号验证后自动创建小青龙账户</string>
    <string name="login_agreement">我已阅读并同意《小青龙用户协议》、《隐私政策》并授权小青龙使用该小青龙账号信息(如昵称、头像、手机号)进行统一管理。</string>
    <string name="login_sendAuth">获取短信验证码</string>
    <string name="login_password">密码登录</string>
    <string name="login_auth">验证码登录</string>
    <string name="login_problem">遇到问题</string>
    <string name="login_help">帮助</string>
    <string name="login_login">登录</string>

    <!--- annotation for text of HomeFragment -->
    <string name="home_search">搜索</string>

    <!--- annotation for text of CommunityFragment -->
    <string name="community_recommend">推荐</string>
    <string name="community_follow">关注</string>

    <!--- annotation for text of UserFragment -->
    <string name="user_login">点击登录</string>

    <!--- annotation for text of CodeActivity -->
    <string name="code_inputCode">输入验证码</string>
    <string name="code_sendCode">验证码已发送至</string>
    <string name="code_resendCode">收不到验证码点这里</string>
    <string name="code_waitCode">秒后重新获取验证码</string>

    <!--- annotation for text of UserInfo -->
    <string name="userFunc_myCar">我的车辆</string>
    <string name="userFunc_myCreate">我的创作</string>
    <string name="userFunc_myStar">我的收藏</string>
    <string name="userFunc_myHistory">历史浏览</string>

    <!--- annotation for text of Create -->
    <string name="create_btn">发布</string>
    <string name="create_limitPhoto">选择图片数量达到上限(3)</string>
    <string name="create_clearPhoto">图片数量已清空</string>
    <string name="create_title">文章标题</string>

    <!--- annotation for text of Fans -->
    <string name="fans_follow">+ 关注</string>
    <string name="fans_followed">已关注</string>
    <string name="fans_followBoth">已互关</string>

    <!--- annotation for text of popup comments -->
    <string name="comment_allComments">全部评论</string>

    <!--- annotation for text of detailInfo -->
    <string name="detail_editText">编辑资料</string>

    <string name="app_name">VehicleContacting</string>

</resources>