<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/default_areaTel"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:text=">" />

            </LinearLayout>


            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:background="@null"
                android:layout_marginStart="10dp"
                android:hint="@string/login_inputTel"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTabTopSeparator"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_not_register"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:padding="5dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="20dp"
                android:src="@drawable/bk_checkrect"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_agreement"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/bk_sendauth"
            android:textStyle="bold"
            android:text="@string/login_sendAuth"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@android:color/black"
                android:text="@string/login_password"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/login_problem"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/bp_close"
        android:layout_margin="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_help"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>