<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code_inputCode"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/code_sendCode"/>

            <TextView
                android:id="@+id/code_tel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text=""/>

        </LinearLayout>

        <com.dalimao.corelibrary.VerificationCodeInput
            android:id="@+id/code_inputCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            app:inputType="number"
            app:box="6"
            app:child_h_padding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/code_resendCode"
            android:textColor="@color/colorResendCode"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/code_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/bp_left"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/code_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_help"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>