<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/test_img"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:orientation="horizontal">

                <com.example.vehiclecontacting.Widget.AvtView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/yp_like"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="56万"
                                android:gravity="center"
                                android:textSize="15sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/userInfo_moments"
                                android:textSize="12sp"
                                android:gravity="center"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="56万"
                                android:gravity="center"
                                android:textSize="15sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/userInfo_follow"
                                android:textSize="12sp"
                                android:gravity="center"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="56万"
                                android:gravity="center"
                                android:textSize="15sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/userInfo_fans"
                                android:textSize="12sp"
                                android:gravity="center"/>
                        </LinearLayout>
                    </LinearLayout>

                    <com.example.vehiclecontacting.Widget.FollowView
                        android:id="@+id/detail_follow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/detail_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:background="@drawable/bk_editinfo"
                        android:layout_marginTop="10dp"
                        android:text="编辑资料"
                        android:textColor="#ffd207"
                        android:layout_gravity="center"
                        android:visibility="gone"/>
                </LinearLayout>
            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/detail_viewpager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/detail_close"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="15dp"
        android:src="@drawable/bp_left"/>

</RelativeLayout>